# DetectorObjects

./: CMakeLists.txt  main.cpp
YOLO/: yolov3-tiny.cfg
